@@ -1,0 +1,3 @@
+fixtures:
+  symlinks:
+    backport_package_settings: "#{source_dir}"
