@@ -1,0 +1,3 @@
+--format d
+--colour
+--backtrace
