@@ -1,0 +1,38 @@
+---
+language: ruby
+# temporary workaround for travis issue #1793
+# see: https://github.com/travis-ci/travis-ci/issues/1793
+before_install:
+  - gem update --system 2.1.11
+  - gem --version
+rvm:
+  - 1.8.7
+  - 1.9.3
+  - 2.0.0
+    #  - ruby-head
+script: "bundle exec rake spec SPEC_OPTS='--format documentation'"
+branches:
+  only:
+    master
+env:
+  matrix:
+    - PUPPET_GEM_VERSION="~> 2.7.0"
+    - PUPPET_GEM_VERSION="~> 3.0.0"
+    - PUPPET_GEM_VERSION="~> 3.1.0"
+    - PUPPET_GEM_VERSION="~> 3.2.0"
+matrix:
+  allow_failures:
+    # - rvm: ruby-head
+  exclude:
+    - rvm: 1.8.7
+      env: PUPPET_GEM_VERSION="~> 2.7.0"
+    - rvm: 1.9.3
+      env: PUPPET_GEM_VERSION="~> 2.7.0"
+    - rvm: 2.0.0
+      env: PUPPET_GEM_VERSION="~> 2.7.0"
+    - rvm: 2.0.0
+      env: PUPPET_GEM_VERSION="~> 3.0.0"
+    - rvm: 2.0.0
+      env: PUPPET_GEM_VERSION="~> 3.1.0"
+notifications:
+  email: false
