@@ -5,7 +5,7 @@ Bundler.require :default
 
 require 'rspec/core/rake_task'
 require 'puppetlabs_spec_helper/rake_tasks'                                     
-require 'rspec-system/rake_task'
+#require 'rspec-system/rake_task'
 #require 'puppet-lint/tasks/puppet-lint'
 
 task :default do
