@@ -1,0 +1,2 @@
+require 'puppetlabs_spec_helper/module_spec_helper'
+require 'puppet/backport/type/package/package_settings'
